fix menu pages on mobile

--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -778,7 +778,7 @@ font-weight: 600;
 padding: 40px 0 30px 0;
 border-bottom: solid 1px #e4e4e4; }
 @media (max-width: 991px) {
-	.second-menu {
+	.second-menu .menu {
 		display: none;
 	}
 	.second-menu .menu .buttons {
